force-app/main/default/objects/Activity/fields/Attentance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attentance_Status__c</fullName>
    <label>Attentance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Awaiting Tour</fullName>
                <isActive>false</isActive>
                <label>Awaiting Tour</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <isActive>false</isActive>
                <label>No Show</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>