force-app/main/default/objects/Activity/fields/call_date__c.field-meta.xml
<CustomField>
    <fullName>call_date__c</fullName>
    <label>Call date</label>
    <type>DateTime</type>
</CustomField>