force-app/main/default/objects/Activity/fields/Call_duration__c.field-meta.xml
<CustomField>
    <fullName>Call_duration__c</fullName>
    <label>Call duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>