force-app/main/default/objects/Activity/fields/Call_status__c.field-meta.xml
<CustomField>
    <fullName>Call_status__c</fullName>
    <label>Call status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>