force-app/main/default/objects/Activity/fields/Google_event_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_event_ID__c</fullName>
    <externalId>true</externalId>
    <label>Google event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>