force-app/main/default/objects/Activity/fields/IncomingPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>IncomingPhoneNumber__c</fullName>
    <label>Incoming Phone Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>