force-app/main/default/objects/Activity/fields/Recording_link__c.field-meta.xml
<CustomField>
    <fullName>Recording_link__c</fullName>
    <label>Recording link</label>
    <type>Url</type>
</CustomField>