force-app/main/default/objects/Activity/fields/VCCCAAS__Voicenter_CDR_Call_Details__c.field-meta.xml
<CustomField>
    <fullName>VCCCAAS__Voicenter_CDR_Call_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Details</label>
    <referenceTo>VCCCAAS__Voicenter_CDR_Call_Details__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>