force-app/main/default/objects/Activity/fields/VCCCAAS__Voicenter_IVR_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>VCCCAAS__Voicenter_IVR_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>IVR Unique Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>